# gitalma

./: .gitignore  .pre-commit-config.yaml  ACCEPTANCE.md  DEV.md  README.md  all-documents.html  apidocs-help.html  classIndex.html  dir  fullsearchindex.json  gitalma.api_gh.GitHubAPI.html  gitalma.api_gh.html  gitalma.api_gl.GitLabAPI.html  gitalma.api_gl.html  gitalma.cli.html  gitalma.git.html  gitalma.github.html  gitalma.gitlab.html  gitalma.html  gitalma.init.html  gitalma.scratch.Scratch.html  gitalma.scratch.html  gitalma.versions.html  github-rse,yml  github-rse.yml  gitlab  gitlab.py  gitlab2.py  gitlab_maker.py  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  searchindex.json  undoccedSummary.html
.github/workflows/: pydoctor.yml  pytest.yml
api/: gitlab  gitlab.py  gitlab_maker.py
gitalma/: __init__.py  api_gh.py  api_gl.py  cli.py  git.py  github.py  gitlab.py  init.py  scratch.py  versions.py
src/gitalma/: gitlab.py  init.py  versions.py
src/gitalma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: self.yml  test_maker.py
