[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "gitalma"
version = "0.0.7"
description = "A library to work with gitlab on alma"
authors = [{name = "RSE team", email = "rachel.alcraft@icr.ac.uk"}]

dependencies = [
    "requests",
    "pandas",
    "pyyaml"
]

[tool.setuptools]
packages = ["gitalma"]  

[tool.setuptools.package-data]
pyalma = ["*.py"]

[project.scripts]
gitalma = 'gitalma.cli:main'
gitlab = 'gitalma.cli:main'