[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "gitalma"
version = "0.1.6"
description = "A library to work with gitlab on alma"
authors = [{name = "ICR RSE team", email = "rachel.alcraft@icr.ac.uk"}]

dependencies = [
    "requests",
    "pandas",
    "pyyaml"
]



[project.scripts]
gitalma = 'gitalma.cli:main'
gitlab = 'gitalma.cli:main'