[build-system]
requires = ["setuptools>=42", "wheel", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "gitalma"
version = "1.1.1"
description = "A library to work with gitlab on alma"
authors = [{name = "ICR RSE team", email = "rachel.alcraft@icr.ac.uk"}]

dependencies = [
    "requests",
    "pandas",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-dependency",
    "pre-commit",
]
ci = [
    "black",
    "ruff",
    "pytest",
    "pytest-dependency",
]

[tool.setuptools]
 packages = ["gitalma"]  
 
 [tool.setuptools.package-data]
 pyalma = ["*.py"]

[project.scripts]
gitalma = 'gitalma.cli:main'
gitlab = 'gitalma.cli:main'